config for persistent h2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=demo
+##use these if you want to persist data between runs
+##spring.datasource.url=jdbc:h2:/Users/petervanmanen/Documents/commutr/demo/db
+##spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
